fixed alignment on explore

--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -1,3 +1,8 @@
+
+.explore {
+    margin-left: 15%;
+}
+
 .homepage-container {
     margin-top: 50px;
     margin-bottom:15%;
